# fontconfig

./: config.h.meson  meson-test-wordlist.txt  meson.build  meson_options.txt
fc-lang/: fc-lang.c
src/: fcint.h  fclang.c  fcstr.c  makealias  makegperf  makegperf.py  meson.build
